crates/etas_tests/fixtures/compiler/projects/positive/dependency_spec_trace_metadata_replay/src/app/main.es
module app.main;

import app.consumer.{consume_local};
import app.model.{local_packet};

flow main(args: Array<string>) -> i32
{
    let encoded: string = consume_local(local_packet());
    return 0;
}
