crates/etas_tests/fixtures/compiler/projects/negative/module_path_mismatch/src/app/main.es
module app.wrong;

flow main(args: Array<string>) -> i32 {
    return 0;
}
